# fixed delivery img spacing

--- a/assets/landing-delivery.css
+++ b/assets/landing-delivery.css
@@ -85,11 +85,11 @@
 .delivery-img {
     width: 80px;
     height: 80px;
-    padding-top: 20px
+    margin-top: 20px;
+    margin-bottom: 9px;
 }
 
 .delivery-title-sm {
-    padding-top: 17px;
     padding-bottom: 20px;
     font-weight: 500;
     font-size: 17px;
@@ -181,13 +181,12 @@
     }
 
     .delivery-img {
-        width: 60px;
-        padding-top: 0;
-
+        width: 80px;
+        margin-top: 25px;
+        margin-bottom: 9px;
     }
 
     .delivery-title-sm {
-        padding-top: 15px;
         font-size: 20px;
         line-height: 31px;
     }
